@@ -1,3 +1,13 @@
+2005-03-11  Bart Veer  <bartv@ecoscentric.com>
+
+	* src/synth_intr.c (synth_hardware_init): allow the platform to
+	customize the sigaction structures.
+
+	* include/hal_io.h: add more signal-related definitions
+
+	* cdl/hal_synth.cdl: change the clock calculations, so that users
+	only need to specify RTC_PERIOD
+
 2004-12-14  Alexander Neundorf <neundorf@kde.org>
 	    Andrew Lunn        <andrew.lunn@ascom.ch>
 
